# skydio-mission-preflight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/bvlos-waiver-block/: mission.yaml
examples/dfr-rapid-launch/: mission.yaml
examples/multi-drone-inspection/: mission.yaml
mission_preflight/: __init__.py  checks.py  cli.py  doctor.py  models.py  plan.py  report.py  run_module.py  store.py
scripts/: export_site_data.sh  publish-site.sh
site/: app.js  index.html  styles.css
site/data/: demo.json
tests/: test_checks.py  test_cli.py  test_doctor.py  test_plan.py
